--- a/Labs/Lab 6/Lab 6.ipynb
+++ b/Labs/Lab 6/Lab 6.ipynb
@@ -15,8 +15,11 @@
    "source": [
     "import numpy as np\n",
     "import scipy as sc\n",
+    "import scipy.linalg\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +48,7 @@
     "    N = A.shape[0]\n",
     "    \n",
     "    # caculamos el x\n",
-    "    x = np.zeros_like(b, dtype=np.float32)\n",
+    "    x = np.zeros_like(b, dtype=np.float)\n",
     "    for i in range(N):\n",
     "        # buscamos la suma de los productos\n",
     "        # entre la sección triangular inferior\n",
@@ -69,7 +72,7 @@
     "    N = A.shape[0]\n",
     "    \n",
     "    # caculamos el x\n",
-    "    x = np.zeros_like(b, dtype=np.float32)\n",
+    "    x = np.zeros_like(b, dtype=np.float)\n",
     "    for i in reversed(range(N)):\n",
     "        \n",
     "        # buscamos la suma de los productos\n",
@@ -111,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2. , -1.4, -1.2], dtype=float32)"
+       "array([ 2. , -1.4, -1.2])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3. , -1.4,  2. ], dtype=float32)"
+       "array([ 3. , -1.4,  2. ])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +216,7 @@
     "    # los cuales iremos modificando para simplificar\n",
     "    # el sistema\n",
     "    U, y = A.copy(), b.copy()\n",
-    "    U, y = U.astype(np.float32), y.astype(np.float32)\n",
+    "    U, y = U.astype(np.float), y.astype(np.float)\n",
     "    \n",
     "    for k in range(N - 1):\n",
     "        for i in range(k + 1, N):            \n",
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1., -3., -2.,  1.], dtype=float32)"
+       "array([ 1., -3., -2.,  1.])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,18 +333,459 @@
    "source": [
     "## 3)\n",
     "\n",
-    "Escribir una función llamada `sollu` que resuelva sistemas lineales $ Ax = b $ usando descomposición LU con pivoteo (para obtener dicha descomposición investigar el subpaquete de la librería scipy: `linalg`) para luego resolver $ Ly = P^-1 b $ (¿Cómo se puede obtener la inversa de una matriz de pivoteo?) y $ Ux = y $ usando `soltrinf` y `soltrsup`. la salida debe ser la solución $x$ y debe tener de entrada $ (A, b) $ con $ A \\in \\mathbb R^{nxn} $ y $ b \\in \\mathbb R^n $. "
+    "Escribir una función llamada `sollu` que resuelva sistemas lineales $ Ax = b $ usando descomposición LU con pivoteo (para obtener dicha descomposición investigar el subpaquete de la librería scipy: `linalg`) para luego resolver $ Ly = P^-1 b $ (¿Cómo se puede obtener la inversa de una matriz de pivoteo?) y $ Ux = y $ usando `soltrinf` y `soltrsup`. la salida debe ser la solución $x$ y debe tener de entrada $ (A, b) $ con $ A \\in \\mathbb R^{nxn} $ y $ b \\in \\mathbb R^n $. \n",
+    "\n",
+    "Primero comenzamos investigando cómo se puede descomponer una matriz A:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4, 4), (4, 4), (4, 4), (4, 4))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.random.randn(4, 4)\n",
+    "P, L, U = sc.linalg.lu(A)\n",
+    "\n",
+    "A.shape, P.shape, L.shape, U.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora que tenemos estos datos, construimos nuestra función:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sollu(A, b):\n",
+    "    # buscamos la descomposición\n",
+    "    P, L, U = sc.linalg.lu(A.astype(np.float))\n",
     "    \n",
-    "    "
+    "    # resolvemos Ly = P^(-1)b\n",
+    "    # P.T es la inversa de P\n",
+    "    # @ es el operador para multiplicar ndarrays\n",
+    "    y = soltrinf(L, P.T @ b)\n",
+    "    \n",
+    "    # resolvemos Ux = y\n",
+    "    x = soltsup(U, y)\n",
+    "    \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1., -3., -2.,  1.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# construir las matrices\n",
+    "A = np.stack([[6, -2, 2, 4],\n",
+    "              [12, -8, 6, 10],\n",
+    "              [3, -13, 9, 3],\n",
+    "              [-6, 4, 1, -18]])\n",
+    "\n",
+    "b = np.array([12, 34, 27, -38])\n",
+    "\n",
+    "# usamos soleg\n",
+    "\n",
+    "x = sollu(A, b)\n",
+    "\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4)\n",
+    "\n",
+    "Comparar las soluciones dadas por `soleg` y `sollu` al resolver $ Ax = b $ con:\n",
+    "\n",
+    "$$\n",
+    "A = \n",
+    "\\left(\\begin{array}{cc}\n",
+    "4 & -1 & 0 & -1 & 0 & 0 \\\\\n",
+    "-1 & 4 & -1 & 0 & -1 & 0 \\\\\n",
+    "0 & -1 & 4 & 0 & 0 & -1 \\\\\n",
+    "-1 & 0 & 0 & 4 & -1 & 0 \\\\\n",
+    "0 & -1 & 0 & -1 & 4 & -1 \\\\\n",
+    "0 & 0 & -1 & 0 & -1 & 4 \\\\\n",
+    "\\end{array}\\right)\n",
+    " , b1 = \n",
+    "\\left(\\begin{array}{cc}\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\end{array}\\right)\n",
+    ", b2 =\n",
+    "\\left(\\begin{array}{cc}\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "\\end{array}\\right)\n",
+    "$$\n",
+    "\n",
+    "Para comparar los dos métodos, no sólo vamos a usar los resultados, si no que vamos a calcular cuánto tiempo lleva cada uno."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Método soleg con b1, tiempo = 0.0017739999999999423\n",
+      "Método sollu con b1, tiempo = 0.0011450000000001737\n",
+      "Método soleg con b2, tiempo = 0.002030999999999894\n",
+      "Método sollu con b2, tiempo = 0.0009600000000000719\n"
+     ]
+    }
+   ],
+   "source": [
+    "# definimos los parámetros\n",
+    "\n",
+    "A = np.matrix([\n",
+    "    [4, -1, 0, -1, 0, 0],\n",
+    "    [-1, 4, -1, 0, -1, 0],\n",
+    "    [0, -1, 4, 0, 0, -1],\n",
+    "    [-1, 0, 0, 4, -1, 0],\n",
+    "    [0, -1, 0, -1, 4, -1],\n",
+    "    [0, 0, -1, 0, -1, 4],\n",
+    "])\n",
+    "\n",
+    "b_1 = np.array([1, 1, 1, 0, 0, 0])\n",
+    "b_2 = np.array([1, 1, 1, 1, 1, 1])\n",
+    "\n",
+    "# método soleg con b1\n",
+    "\n",
+    "soleg_b1_start = time.process_time()\n",
+    "soleg_x_1 = soleg(A, b_1)\n",
+    "soleg_b1_end = time.process_time()\n",
+    "\n",
+    "# método soleg con b2\n",
+    "\n",
+    "soleg_b2_start = time.process_time()\n",
+    "soleg_x_2 = soleg(A, b_2)\n",
+    "soleg_b2_end = time.process_time()\n",
+    "\n",
+    "# método sollu con b1\n",
+    "\n",
+    "sollu_b1_start = time.process_time()\n",
+    "sollu_x_1 = sollu(A, b_1)\n",
+    "sollu_b1_end = time.process_time()\n",
+    "\n",
+    "# método sollu con b2\n",
+    "\n",
+    "sollu_b2_start = time.process_time()\n",
+    "sollu_x_2 = sollu(A, b_2)\n",
+    "sollu_b2_end = time.process_time()\n",
+    "\n",
+    "# validamos que los resultados\n",
+    "# sean lo suficientemente parecidos\n",
+    "\n",
+    "assert np.isclose(soleg_x_1, sollu_x_1, 0.0001).all(), 'Para b1 son distintos'\n",
+    "assert np.isclose(soleg_x_2, sollu_x_2, 0.0001).all(), 'Para b2 son distintos'\n",
+    "\n",
+    "# mostramos los resultados:\n",
+    "\n",
+    "print(f'Método soleg con b1, tiempo = {soleg_b1_end - soleg_b1_start}')\n",
+    "print(f'Método sollu con b1, tiempo = {sollu_b1_end - sollu_b1_start}')\n",
+    "\n",
+    "print(f'Método soleg con b2, tiempo = {soleg_b2_end - soleg_b2_start}')\n",
+    "print(f'Método sollu con b2, tiempo = {sollu_b2_end - sollu_b2_start}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cómo podemos observar, en la mayoría de los casos, el método `soleg` es mucho más rápido que `sollu`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5)\n",
+    "\n",
+    "Escribir dos funciones llamadas `jacobi` y  `gseidel` que resuelvan sistemas lineales $ Ax = b $ usando los respectivos métodos. La salida debe ser $ [x, k] $ donde $ x $ es la solución aproximada y $ k $ la cantidad de iteraciones realizadas. Debe tener entrada $ (A, b, err, mit) $ con $ A \\in \\mathbb R^(nxn), b \\in \\mathbb R^n $, err es la tolerancia de error y mit es la cantidad máxima de iteraciones a realizar. El algoritmo debe parar si $ || x^{(k)} - x^{(k - 1)} ||_{\\infty} \\leq err $ o $ k \\geq mit $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def jacobi(A, b, err, mit):\n",
+    "    # convertimos todo a flotante\n",
+    "    A = A.astype(np.float)\n",
+    "    b = b.astype(np.float)\n",
+    "    \n",
+    "    # inicializamos x con ceros y definimos N\n",
+    "    x = np.zeros_like(b)\n",
+    "    N = A.shape[0]\n",
+    "    \n",
+    "    for k in range(mit):\n",
+    "        \n",
+    "        # buscamos una nueva aproximación\n",
+    "        u = x.copy()\n",
+    "        for i in range(N):\n",
+    "            sum_i = sum([A[i, j] * x[j] for j in range(N) if j != i])\n",
+    "            u[i] = (1 / A[i, i]) * (b[i] - sum_i)\n",
+    "        \n",
+    "        # validamos y pisamos x\n",
+    "        if (np.abs(u - x) < err).all():\n",
+    "            return u, k\n",
+    "        x = u\n",
+    "    \n",
+    "    return x, mit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.20004988, -0.26670546])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# probamos jacobi\n",
+    "\n",
+    "A = np.matrix([\n",
+    "    [7, -6],\n",
+    "    [-8, 9]\n",
+    "])\n",
+    "b = np.array([3, -4])\n",
+    "\n",
+    "x, k = jacobi(A, b, 0.0001, 100)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gseidel(A, b, err, mit):\n",
+    "    # convertimos todo a flotante\n",
+    "    A = A.astype(np.float)\n",
+    "    b = b.astype(np.float)\n",
+    "    \n",
+    "    # inicializamos x con ceros y definimos N\n",
+    "    x = np.zeros_like(b)\n",
+    "    N = A.shape[0]\n",
+    "    \n",
+    "    for k in range(mit):\n",
+    "        \n",
+    "        # buscamos una aproximación\n",
+    "        u = np.zeros_like(x)\n",
+    "        for i in range(N):\n",
+    "            sum_i = sum([A[i, j] * x[j] for j in range(N) if j != i])\n",
+    "            u[i] = (1 / A[i, i]) * (b[i] - sum_i)\n",
+    "        \n",
+    "        # validamos y actualizamos x\n",
+    "        if (np.abs(u - x) < err).all():\n",
+    "            return u, k\n",
+    "        \n",
+    "        x = u\n",
+    "    \n",
+    "    return x, mit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.20004988, -0.26670546])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# probamos Gauss Seidel\n",
+    "\n",
+    "A = np.matrix([\n",
+    "    [7, -6],\n",
+    "    [-8, 9]\n",
+    "])\n",
+    "b = np.array([3, -4])\n",
+    "\n",
+    "x, k = gseidel(A, b, 0.0001, 100)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6)\n",
+    "\n",
+    "Usar los métodos de Jacobi y Gauss-Seidel para resolver:\n",
+    "\n",
+    "$$\n",
+    "(1) \n",
+    "\\left(\\begin{array}{cc}\n",
+    "3 & 1 & 1 \\\\\n",
+    "2 & 6 & 1 \\\\\n",
+    "1 & 1 & 4 \\\\\n",
+    "\\end{array}\\right)\n",
+    "\\left(\\begin{array}{cc}\n",
+    "x_1 \\\\\n",
+    "x_2 \\\\\n",
+    "x_3 \\\\\n",
+    "\\end{array}\\right)\n",
+    "=\n",
+    "\\left(\\begin{array}{cc}\n",
+    "5 \\\\\n",
+    "9 \\\\\n",
+    "6 \\\\\n",
+    "\\end{array}\\right)\n",
+    ", (2) \n",
+    "\\left(\\begin{array}{cc}\n",
+    "5 & 7 & 6 & 5 \\\\\n",
+    "7 & 10 & 8 & 7 \\\\\n",
+    "6 & 8 & 10 & 9 \\\\\n",
+    "5 & 7 & 9 & 10 \\\\\n",
+    "\\end{array}\\right)\n",
+    "\\left(\\begin{array}{cc}\n",
+    "x_1 \\\\\n",
+    "x_2 \\\\\n",
+    "x_3 \\\\\n",
+    "x_4 \\\\\n",
+    "\\end{array}\\right)\n",
+    "=\n",
+    "\\left(\\begin{array}{cc}\n",
+    "23 \\\\\n",
+    "32 \\\\\n",
+    "33 \\\\\n",
+    "31 \\\\\n",
+    "\\end{array}\\right)\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacobi: x = [1. 1. 1.], k = 45 \n",
+      "Gauss-Seidel: x = [1. 1. 1.], k = 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (1)\n",
+    "\n",
+    "A = np.matrix([\n",
+    "    [3, 1, 1],\n",
+    "    [2, 6, 1],\n",
+    "    [1, 1, 4],\n",
+    "])\n",
+    "b = np.array([5, 9, 6])\n",
+    "err = pow(10, -11)\n",
+    "\n",
+    "jx, jk = jacobi(A, b, err, 500)\n",
+    "gx, gk = gseidel(A, b, err, 500)\n",
+    "\n",
+    "print(\n",
+    "f'Jacobi: x = {jx}, k = {jk} \\n'\n",
+    "f'Gauss-Seidel: x = {gx}, k = {gk}'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacobi: x = [-9.62494568e+196 -6.69787281e+196 -6.78902817e+196 -6.30550249e+196], k = 500 \n",
+      "Gauss-Seidel: x = [-9.62494568e+196 -6.69787281e+196 -6.78902817e+196 -6.30550249e+196], k = 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (2)\n",
+    "\n",
+    "A = np.matrix([\n",
+    "    [5, 7, 6, 5],\n",
+    "    [7, 10, 8, 7],\n",
+    "    [6, 8, 10, 9],\n",
+    "    [5, 7, 9, 10]\n",
+    "])\n",
+    "b = np.array([23, 32, 33, 31])\n",
+    "err = pow(10, -11)\n",
+    "\n",
+    "jx, jk = jacobi(A, b, err, 500)\n",
+    "gx, gk = gseidel(A, b, err, 500)\n",
+    "\n",
+    "print(\n",
+    "f'Jacobi: x = {jx}, k = {jk} \\n'\n",
+    "f'Gauss-Seidel: x = {gx}, k = {gk}'\n",
+    ")"
    ]
   }
  ],
